customize appearance first screen

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
             </div>
             <button class="button button__show-rates">Показать курс</button>
             <div id="current-rates-result"></div>
+            <div class="currencies-block">
+            </div>
         </div>
     </section>
 
