add info about browser

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,10 @@
     </section>
 
     <div class="container">
-        <button id="button-share" class="button button__share">Поделиться</button>
+        <div class="footer">
+            <button id="button-share" class="button button__share">Поделиться</button>
+            <div class="browser-info"></div>
+        </div>
     </div>
     
     <script src="js/bundle.js"></script>
